✨struc File / upload file
